--- a/index.html
+++ b/index.html
@@ -118,16 +118,12 @@
         
         </style>
     </head>
-    <body><header>
-    <div class="buttonss">
-        <button style="margin-right: 30px;"><a  href="loginn.html" >LOGIN</a></button>
-        <button><a  href="signUp.html">REGISTER</a></button>
-    </div></header>
+    <body>
     <main>
         <div class="content">
            <div class="heading">Whispering<BR/>Willow
             <div class="space">
-            <button CLASS="red" style="margin-top: 20px;"><a href="about.html" style="color: rgb(0, 0, 0);">
+            <button CLASS="red" style="margin-top: 20px;"><a href="project.html" style="color: rgb(0, 0, 0);">
                 Get Started</a>
             </button></div>
         </div>
