--- a/profile.html
+++ b/profile.html
@@ -122,6 +122,9 @@
     column-gap: 7px;
   
 }
+    .navi {
+  z-index: 9999;
+}
 .bleh{
     display: flex;
     flex-direction: row;
@@ -153,9 +156,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="./project.html" >Dashboard<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./selfcare.html">Self Care</a>
-            </li>
+           
             <li class="nav-item">
               <a class="nav-link" href="./mood.html" >Mood Tracker</a>
             </li>
